Added a set up config for Email Service

--- a/Config.json
+++ b/Config.json
@@ -15,7 +15,8 @@
         "Status": false
     },
     "Login": {
-        "L_email": "",
-        "E_APIKEY": ""
+        "L_email": "a",
+        "E_APIKEY": "a",
+        "Status": false
     }
 }
