Reducing the background if there is sound and detect if there is only background

--- a/Requirments/requirements.txt
+++ b/Requirments/requirements.txt
@@ -1,8 +1,8 @@
 SpeechRecognition
 pyttsx3
+torch
 numpy
 sounddevice
-tkinter
 cryptography
 librosa
 scipy
@@ -10,3 +10,5 @@ AudioSegment
 wave
 webrtcvad
 imageio[ffmpeg]
+noisereduce 
+pyaudio
